# pySigma-backend-splunk

./: .git-blame-ignore-revs  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
.pytest_cache/v/cache/: lastfailed  nodeids
sigma/backends/splunk/: __init__.py  spl2.py  splunk.py
sigma/pipelines/splunk/: __init__.py  splunk.py
tests/: test_backend_splunk.py  test_backend_splunk_correlations.py  test_backend_splunk_spl2.py  test_splunk_pipelines.py
