[tool.poetry]
name = "pysigma-backend-splunk"
version = "1.0.1"
description = "pySigma Splunk backend"
authors = ["Thomas Patzke <thomas@patzke.org>"]
license = "LGPL-2.1-only"
repository = "https://github.com/SigmaHQ/pySigma-backend-splunk"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
