[tool.poetry]
name = "pysigma-backend-splunk"
version = "1.1.2"
description = "pySigma Splunk backend"
readme = "README.md"
authors = ["Thomas Patzke <thomas@patzke.org>"]
license = "LGPL-2.1-only"
repository = "https://github.com/SigmaHQ/pySigma-backend-splunk"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.9"
pysigma = "^0.11.18"

[tool.poetry.dev-dependencies]
black = "^24.1"
pre-commit = "^3.5"
pytest = "^8.0"
pytest-cov = "^4.1"
defusedxml = "^0.7"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
